lavc/libvpx: Fix support for RGB colorspace.

Reported and tested by Nicolas George.
Fixes ticket #5249.